Review fixes